@startuml  
class Carta {
    - string rango
    - string palo
    - bool estaBocaArriba
    + voltear()
}

class Mazo {
    - List<Carta> cartas
    + barajar()
    + robarCarta() : Carta
    + reiniciarMazo()
}

class PilaDescarte {
    - List<Carta> cartas
    + anadirCarta(Carta)
    + removerCarta() : Carta
}

class PilaTablero {
    - List<Carta> cartas
    + anadirCarta(Carta)
    + removerCarta() : Carta
    + puedeAnadirCarta(Carta) : bool
}

class PilaFundacion {
    - List<Carta> cartas
    + anadirCarta(Carta)
    + removerCarta() : Carta
    + puedeAnadirCarta(Carta) : bool
}

class SolitarioKlondike {
    - Mazo mazo
    - PilaDescarte pilaDescarte
    - List<PilaTablero> pilasTablero
    - List<PilaFundacion> pilasFundacion
    + iniciarJuego()
    + moverCartaEntrePilasTablero(PilaTablero, PilaTablero)
    + moverCartaAFundacion(PilaTablero, PilaFundacion)
    + robarDelMazo()
}

Carta "52" -- "1" Mazo : contiene
Mazo "1" -- "1" PilaDescarte : descarta
PilaDescarte "1" -- "1..*" Carta : contiene
PilaTablero "1" -- "1..*" Carta : contiene
PilaFundacion "1" -- "1..*" Carta : contiene
SolitarioKlondike "1" -- "1" Mazo : usa
SolitarioKlondike "1" -- "1" PilaDescarte : usa
SolitarioKlondike "1" -- "1..*" PilaTablero : usa
SolitarioKlondike "1" -- "1..*" PilaFundacion : usa

@enduml